# StudyCode

./: .clangd  .gitignore  .gitmodules  README.md  ~$c嵌入式学习笔记.docx
Bootload/: .mxproject  README.md
FreeRTOS/time_slice/: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  task.ioc
LeetCode/: CMakeLists.txt  README.md
LinuxDrive/: README.md  vscode-workspace.code-workspace
LinuxDrive/drive/: compile_commands.json
Notes/: Design Pattern.md  Embedded Linux.md  EmbeddedNotes.md  FreeRTOS.md  GIT.md  Kernel & Drive.md  Kernel & Drives.md  Linux Base.md  Other.md  QT.md  Tools.md  Zephyr.md
Notes/Platform/: FreeRTOS.md  Misc.md  QT.md
Notes/RTOS/: Zephyr.md
Notes/media/: image46.emf
OpenOCD-MAKEFILE/: Makefile  zephyr.elf
OpenOCD-MakeFile/: .mxproject  HELLO.ioc  Makefile  README.md
StructureAlgorithms/: use_time.c
Tool/gdb/: README.md  get-symbols-uvc.sh  ko-to-symbols.sh
Tool/openocd_cfg/: dap-f1.cfg  dap-f4.cfg  elaphure-f1.cfg  jlink-f1xx.cfg  stlink-f1xx.cfg
USB/: README.md
Zephry/00_hello_world/: CMakeLists.txt  app.overlay
Zephry/02_key/: app.overlay  openocd.cfg
code/: child_process.c  gcd.c  quick_sort.c  stream_decompress.c
code/daemon/: CMakeLists.txt  daemon.c  main.c  readme.md
code/erpc/: CMakeLists.txt  README.md  client.cpp  server.cpp
code/erpc/erpcgen/: c_hello_client.cpp  c_hello_client.h  c_hello_server.cpp  c_hello_server.h  hello.erpc  hello_client.cpp  hello_client.hpp  hello_common.h  hello_common.hpp  hello_interface.cpp  hello_interface.hpp  hello_server.cpp  hello_server.hpp
(+259 files in other folders)
